--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,98 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Comfortaa", cursive !important;
+  height: 100vh;
+  width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*:focus {
+  box-shadow: none !important;
+}
+
+.flexBox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main {
+  padding: 40px;
+}
+.firstBox,
+.secondBox {
+  width: 50%;
+  /* background-color: red; */
+}
+.firstBox {
+  margin-left: 130px;
+  /* align-self: flex-start; */
+}
+.secondBoxFlexBox {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  /* width: 100%; */
+}
+.box2 {
+  background-color: white;
+  width: 60%;
+  border-radius: 8px;
+  padding: 45px;
+  padding-bottom: 20px;
+}
+.main {
+  min-height: 100vh;
+}
+
+.para {
+  width: 82%;
+}
+
+@media (max-width: 1270px) {
+  .box2 {
+    width: 70%;
+    padding: 30px;
+    margin-top: 50px;
+  }
+}
+@media (max-width: 1044px) {
+  .box2 {
+    width: 70%;
+    padding: 30px;
+    margin-top: 50px;
+  }
+  .firstBox {
+    margin-left: 30px;
+  }
+}
+@media (max-width: 880px) {
+  .flexBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .secondBoxFlexBox {
+    align-items: flex-start;
+  }
+
+  .main {
+    height: 100%;
+    padding: 30px;
+  }
+  .firstBox {
+    margin-left: 0px;
+  }
+  .para {
+    width: 95%;
+  }
+  .firstBox,
+  .secondBox {
+    height: 100%;
+    width: 100%;
+  }
+  .box2 {
+    width: 100%;
+    padding: 20px;
+    margin-top: 50px;
+  }
 }
